# wx-obsidian

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  config.yaml  docker-compose.yml  process_articles.py  pyproject.toml  run.sh  validate_markdown.py
prompts/: refine_with_images.txt  summarize_article.txt
skills/article-body/: SKILL.md
skills/classification/: SKILL.md
skills/note-metadata/: SKILL.md
wx_obsidian/: __init__.py  batch.py  cli.py  config.py  config_manager.py  models.py  orchestrator.py  scheduler.py  wewe_rss.py
wx_obsidian/output/: __init__.py  cleanup.py  validator.py  vault.py
wx_obsidian/processing/: __init__.py  images.py  llm.py  markdown.py  models.py  pipeline.py  similarity.py  vision.py
wx_obsidian/sources/: __init__.py  rss.py
wx_obsidian/tui/: __init__.py  __main__.py  app.py
wx_obsidian/tui/screens/: __init__.py  account.py  articles.py  config.py  container.py  feeds.py  fetch.py  home.py  scheduler.py
wx_obsidian/tui/widgets/: __init__.py  status.py
